--- a/scrolling base animation/scroll.html
+++ b/scrolling base animation/scroll.html
@@ -54,19 +54,19 @@
     </div>
 
     <div id="page2">
-      <div class="div">
+      <div class="div one">
         <h1> hellow</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non expedita aliquid recusandae inventore ipsam aperiam dicta.</p>
       </div>
-      <div class="div">
+      <div class="div one">
         <h1> hellow</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non expedita aliquid recusandae inventore ipsam aperiam dicta.</p>
       </div>
-      <div class="div">
+      <div class="div two">
         <h1> hellow</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non expedita aliquid recusandae inventore ipsam aperiam dicta. </p>
       </div>
-      <div class="div">
+      <div class="div two">
         <h1> hellow</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non expedita aliquid recusandae inventore ipsam aperiam dicta.</p>
       </div>
@@ -74,7 +74,7 @@
     </div>
 
     <div id="footer">
-      <div class="footers">
+      <div class="footers one">
         <p>Lorem ipsum dolor sit amet.</p>
         <p>Lorem ipsum dolor sit amet.</p>
         <p>Lorem ipsum dolor sit amet.</p>
@@ -83,7 +83,7 @@
         <p>Lorem ipsum dolor sit amet.</p>
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="footers">
+      <div class="footers two">
         <p>Lorem ipsum dolor sit amet.</p>
         <p>Lorem ipsum dolor sit amet.</p>
         <p>Lorem ipsum dolor sit amet.</p>
@@ -92,7 +92,7 @@
         <p>Lorem ipsum dolor sit amet.</p>
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="footers">
+      <div class="footers three">
         <p>Lorem ipsum dolor sit amet.</p>
         <p>Lorem ipsum dolor sit amet.</p>
         <p>Lorem ipsum dolor sit amet.</p>
@@ -101,7 +101,7 @@
         <p>Lorem ipsum dolor sit amet.</p>
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="footers">
+      <div class="footers four">
         <p>Lorem ipsum dolor sit amet.</p>
         <p>Lorem ipsum dolor sit amet.</p>
         <p>Lorem ipsum dolor sit amet.</p>
